Fix cropped image and some spacing to match with design

--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -94,12 +94,18 @@
     }
 }
 
-.image2 {
-    position: absolute;
-    top: 850px;
-    left: 10%;
-    width: 80%;
+.team-image-container {
+    margin-top: -150px;
+    z-index: 2;
+    position: relative;
+}
 
+.team-image {
+    width: 350px;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .header-title {
@@ -135,6 +141,8 @@
 @media (max-width: 600px) {
     .establishment-homepage {
         margin-top: 450px;
+        padding-left: 0px;
+        padding-right: 0px;
     }
 
     .blue-button {
@@ -177,13 +185,6 @@
 @media screen and (min-width: 600px) {    
     .header-title {
         font-size: 2.5rem;
-    }
-
-    .image2 {
-        top: 60%;
-        object-fit: cover; 
-        object-position: 100%;
-        height: 50vh;
     }
 
     .header {
@@ -235,10 +236,6 @@
         top: 15%;
     }
 
-    .image2 {
-        top: 50%;
- 
-    }
     .header {
         height: 110vw;
     }
@@ -249,6 +246,10 @@
     
     .long-column {
         height: 20vw;
+    }
+
+    .team-image {
+        width: 1200px;
     }
 }
 
@@ -267,11 +268,7 @@
     .header-text{
         top: 15%;
     }
-    .image2 {
-        left: 20%;
-        top: 50%;
-        width: 60%;
-    }
+ 
     #image-est{
         padding: 0vw;
     }
@@ -287,6 +284,10 @@
         width: 60%;
        
     }
+
+    .team-image {
+        width: 1200px;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -295,9 +296,6 @@
     }
     .header-text{
         top: 15%;
-    }
-    .image2 {
-        top: 50%;
     }
 
     .header {
@@ -317,11 +315,8 @@
     .long-column {
         height: 25vw;
     }
+
+    .team-image {
+        width: 1200px;
+    }
 }
-
-
-
-
-
-
-
